// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`breadcrumb for /features 1`] = `
<span>
  <span
    className="headerTitleLink"
  >
    Feature Toggles
  </span>
</span>
`;

exports[`breadcrumb for /features/view/Demo 1`] = `
<span>
  <a
    className="headerTitleLink"
    href="/features"
    onClick={[Function]}
  >
    Feature Toggles
  </a>
  <span>
    <span>
       › 
    </span>
    <span
      className="headerTitleLink"
    >
      Demo
    </span>
  </span>
</span>
`;

exports[`breadcrumb for /strategies 1`] = `
<span>
  <span
    className="headerTitleLink"
  >
    Strategies
  </span>
</span>
`;
